--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,4 @@
 <ul>
-
+   <li *ng=For="let product of Products"><a routerLink="/product/"{{product.id}}" routerLinkActive="active">{{product.albumName}}
+     </a></li>
 </ul>
