Completed the module

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,4 +1,4 @@
 <ul>
-   <li *ng=For="let product of Products"><a routerLink="/product/"{{product.id}}" routerLinkActive="active">{{product.albumName}}
+   <li *ng=For="let product of Products"><a routerLink="/product/{{product.id}}" routerLinkActive="active">{{product.albumName}}
      </a></li>
 </ul>
