--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <ul>
-   <li *ng=For="let product of Products"><a routerLink="/product/{
-     {product.id}}" routerLinkActive="active"></a>{{product.albumName}}
-     </li>
+   <li *ngFor="let product of Products"><a routerLink="/product/{
+     {product.id}}" routerLinkActive="active"{{product.albumName}}
+     </a></li>
 </ul>
